v0.19.0/_sources/projections/azim/azim_general_perspective.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/azim/azim_general_perspective.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_azim_azim_general_perspective.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_azim_azim_general_perspective.py:


Perspective projection
======================

The perspective projection imitates the view of the Earth from a finite
point in space. In a full view of the earth one third of its surface area can
be seen.

**g**\ *lon0/lat0*\ */scale*\ [**+a**\ *azimuth*]\
[**+t**\ *tilt*]\ [**+v**\ *vwidth/vheight*]\ [**+w**\ *twist*]\
[**+z**\ *altitude*] or **G**\ *lon0/lat0*\ */width*\
[**+a**\ *azimuth*]\ [**+t**\ *tilt*]\ [**+v**\ *vwidth/vheight*]\
[**+w**\ *twist*]\ [**+z**\ *altitude*]

The projection type is set with **g** or **G**. *lon0/lat0* specifies the
projection center and *scale* or *width* determine the size of the figure.
With **+a**\ *azimuth* the direction (in degrees) in which you are looking is
specified, measured clockwise from north. **+t**\ *tilt* is given in degrees
and is the viewing angle relative to zenith. A tilt of 0° is looking straight
down, 60° is looking 30° above horizon. The viewport angle in degrees is
described via **+v**\ *vwidth/vheight* and **+w**\ *twist* is the clockwise
rotation of the image (in degrees). **+z**\ *altitude* sets the height in km
of the viewpoint above local sea level (If altitude is less than 10, then it is
the distance from the center of the earth to the viewpoint in earth radii).

The example shows the coast of Northern Europe viewed from 250 km above sea
level looking 30° from north at a tilt of 45°. The height and width of the
viewing angle is both 60°, which imitates viewing with naked eye.

.. GENERATED FROM PYTHON SOURCE LINES 32-44



.. image-sg:: /projections/azim/images/sphx_glr_azim_general_perspective_001.png
   :alt: azim general perspective
   :srcset: /projections/azim/images/sphx_glr_azim_general_perspective_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt
    from pygmt.params import Axis

    fig = pygmt.Figure()
    fig.coast(
        region="g",
        projection="G4/52/12c+a30+t45+v60/60+w0+z250",
        frame=Axis(annot=True, tick=True, grid=True),
        land="khaki",
        water="white",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.369 seconds)


.. _sphx_glr_download_projections_azim_azim_general_perspective.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: azim_general_perspective.ipynb <azim_general_perspective.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: azim_general_perspective.py <azim_general_perspective.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: azim_general_perspective.zip <azim_general_perspective.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
